--- a/app/assets/scss/pages/_broadcasts.scss
+++ b/app/assets/scss/pages/_broadcasts.scss
@@ -14,7 +14,7 @@
 .bc-section-card.message-card {
   width: 100%;
   max-width: 100%;
-  flex-shrink: 1;
+  flex-shrink: 0;
   min-width: 0;
 }
 
