--- a/app/assets/scss/pages/_campaigns.scss
+++ b/app/assets/scss/pages/_campaigns.scss
@@ -5,6 +5,7 @@
 .cmp-section-card {
   width: min(780px, 100%);
   max-width: 100%;
+  flex-shrink: 0;
 }
 
 .cmp-url-row {
