--- a/app/assets/scss/pages/_tags.scss
+++ b/app/assets/scss/pages/_tags.scss
@@ -16,6 +16,7 @@
 .tags-page-card .card-section-stack {
   flex: 1;
   min-height: 0;
+  overflow-y: auto;
 }
 
 .tags-toolbar {
